--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22,6 +22,7 @@ main{
     position: relative;  /*Primeira parte do alinhamento*/
     width: 100vw;
     height: 100vh;
+    background-attachment: fixed;
 }
 
 section#telefone{
